--- a/source/index.html
+++ b/source/index.html
@@ -54,8 +54,9 @@
 
       <!--СПИСКИ ПРЕИМУЩЕСТВ-->
       <section class="advantages">
-        <h2 class="advantages__title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="advantages__description description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        <h2 class="visually-hidden">Наши преимущества.</h2>
+        <p class="advantages__description title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages__reasons description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
         <ol class="advantages__list">
           <li class="advantages__item advantages__item--image">
