Вносит правки в разметку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -28,8 +28,9 @@
           <li class="main-navigation__item main-navigation__item--background">
             <a class="main-navigation__link main-navigation__link--light" href="index.html">Главная</a>
           </li>
-          <li class="main-navigation__item main-navigation__item--background main-navigation__item--current">Фото и
-            видео
+          <li class="main-navigation__item main-navigation__item--background">
+            <a class="main-navigation__link main-navigation__link--light main-navigation__link--current"
+              href="catalog.html" aria-current="page">Фото и видео</a>
           </li>
           <li class="main-navigation__item main-navigation__item--background">
             <a class="main-navigation__link main-navigation__link--light" href="form.html">Форма отзыва</a>
@@ -62,14 +63,9 @@
             <div class="gallery-photo__info-text-wrapper">
               <h3 class="gallery-photo__title title">Неродные просторы</h3>
               <p class="gallery-photo__author">Автор фото: Борис</p>
-              <button class="gallery-photo__like-button like" type="button">
-                <svg class="like__icon" aria-hidden="true" focusable="false" width="23" height="21" viewBox="0 0 23 21"
-                  fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
-                </svg>
-                <span class="visually-hidden">Лайков.</span>
-                <span class="like__quantity"><b class="like__number">1350</b></span>
+              <button class="gallery-photo__like-button button-like" type="button">
+                <span class="visually-hidden">Лайк.</span>
+                <span class="button-like__quantity"><b class="button-like__number">1350</b></span>
               </button>
             </div>
             <img class="gallery-photo__image" src="img/catalog/open-spaces-gallery.jpg" width="280" height="280"
@@ -79,14 +75,9 @@
             <div class="gallery-photo__info-text-wrapper">
               <h3 class="gallery-photo__title title">Местная растительность</h3>
               <p class="gallery-photo__author">Автор фото: Сергей</p>
-              <button class="gallery-photo__like-button like" type="button">
-                <svg class="like__icon" aria-hidden="true" focusable="false" width="23" height="21" viewBox="0 0 23 21"
-                  fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
-                </svg>
-                <span class="visually-hidden">Лайков.</span>
-                <span class="like__quantity"><b class="like__number">143</b></span>
+              <button class="gallery-photo__like-button button-like" type="button">
+                <span class="visually-hidden">Лайк.</span>
+                <span class="button-like__quantity"><b class="button-like__number">143</b></span>
               </button>
             </div>
             <img class="gallery-photo__image" src="img/catalog/vegetation-gallery.jpg" width="280" height="280"
@@ -96,14 +87,9 @@
             <div class="gallery-photo__info-text-wrapper">
               <h3 class="gallery-photo__title title">Дорога на север</h3>
               <p class="gallery-photo__author">Автор фото: Петр</p>
-              <button class="gallery-photo__like-button like" type="button">
-                <svg class="like__icon" aria-hidden="true" focusable="false" width="23" height="21" viewBox="0 0 23 21"
-                  fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
-                </svg>
-                <span class="visually-hidden">Лайков.</span>
-                <span class="like__quantity"><b class="like__number">96</b></span>
+              <button class="gallery-photo__like-button button-like" type="button">
+                <span class="visually-hidden">Лайк.</span>
+                <span class="button-like__quantity"><b class="button-like__number">96</b></span>
               </button>
             </div>
             <img class="gallery-photo__image" src="img/catalog/road-gallery.jpg" width="280" height="280"
@@ -113,14 +99,9 @@
             <div class="gallery-photo__info-text-wrapper">
               <h3 class="gallery-photo__title title">Мост дьявола</h3>
               <p class="gallery-photo__author">Автор фото: Антон</p>
-              <button class="gallery-photo__like-button like" type="button">
-                <svg class="like__icon" aria-hidden="true" focusable="false" width="23" height="21" viewBox="0 0 23 21"
-                  fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
-                </svg>
-                <span class="visually-hidden">Лайков.</span>
-                <span class="like__quantity"><b class="like__number">254</b></span>
+              <button class="gallery-photo__like-button button-like" type="button">
+                <span class="visually-hidden">Лайк.</span>
+                <span class="button-like__quantity"><b class="button-like__number">254</b></span>
               </button>
             </div>
             <img class="gallery-photo__image" src="img/catalog/devils-bridge-gallery.jpg" width="280" height="280"
@@ -133,7 +114,8 @@
       <section class="gallery-video">
         <h2 class="visually-hidden">Обзор видео о Седоне.</h2>
         <p class="gallery-video__text title">Все еще сомневаетесь?</p>
-        <p class="gallery-video__description description">Смотрите видеопрезентацию и скорее за билетами, пока они не
+        <p class="gallery-video__description description">Смотрите видеопрезентацию и скорее за билетами, пока
+          они не
           подорожали в очередной раз!</p>
         <!-- Делаем пока картинку-заглушку, после будет использован video -->
         <div class="gallery-video__video-wrapper video">
