--- a/source/form.html
+++ b/source/form.html
@@ -31,8 +31,10 @@
           <li class="main-navigation__item main-navigation__item--background">
             <a class="main-navigation__link main-navigation__link--light" href="catalog.html">Фото и видео</a>
           </li>
-          <li class="main-navigation__item main-navigation__item--background main-navigation__item--current">Форма
-            отзыва
+          <li class="main-navigation__item main-navigation__item--background">
+            <a class="main-navigation__link main-navigation__link--light main-navigation__link--current"
+              href="form.html" aria-current="page">Форма
+              отзыва</a>
           </li>
           <li class="main-navigation__item main-navigation__item--background main-navigation__item--last">
             <a class="main-navigation__link main-navigation__link--light" href="#">HTML Academy</a>
@@ -117,7 +119,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--radio" type="radio" name="impression"
                     value="rather-positive" checked>
-                  <span class="control__mark"></span>
                   <span class="control__text">Скорее положительное</span>
                 </label>
               </li>
@@ -125,7 +126,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--radio" type="radio" name="impression"
                     value="rather-negative">
-                  <span class="control__mark"></span>
                   <span class="control__text">Скорее отрицательное</span>
                 </label>
               </li>
@@ -133,7 +133,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--radio" type="radio" name="impression"
                     value="hard-to-answer">
-                  <span class="control__mark"></span>
                   <span class="control__text">Затрудняюсь ответить</span>
                 </label>
               </li>
@@ -148,7 +147,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--checkbox" type="checkbox"
                     name="devils-bridge" checked>
-                  <span class="control__mark"></span>
                   <span class="control__text">Мост Дьявола</span>
                 </label>
               </li>
@@ -156,7 +154,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--checkbox" type="checkbox"
                     name="mount-bell" checked>
-                  <span class="control__mark"></span>
                   <span class="control__text">Гора-Колокол</span>
                 </label>
               </li>
@@ -164,7 +161,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--checkbox" type="checkbox"
                     name="slide-park" checked>
-                  <span class="control__mark"></span>
                   <span class="control__text">Слайд-парк</span>
                 </label>
               </li>
@@ -172,7 +168,6 @@
                 <label class="form-control__label control">
                   <input class="visually-hidden control__input control__input--checkbox" type="checkbox"
                     name="red-rocks">
-                  <span class="control__mark"></span>
                   <span class="control__text">Красные скалы</span>
                 </label>
               </li>
