--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,9 @@
     <header class="main-header">
 
       <!--Логотип сайта-->
-      <div class="main-header__logo logo">
+      <a class="main-header__logo-link logo" href="index.html" aria-current="page">
         <img class="logo__image" src="img/logo/logo.svg" width="185" height="96" alt="Логотип города Седона.">
-      </div>
+      </a>
 
       <!--Навигация-->
       <nav class="main-header__navigation main-navigation">
@@ -25,8 +25,9 @@
           <span class="visually-hidden">Открыть меню.</span>
         </button>
         <ul class="main-navigation__list">
-          <li class="main-navigation__item main-navigation__item--background main-navigation__item--current">
-            Главная
+          <li class="main-navigation__item main-navigation__item--background">
+            <a class="main-navigation__link main-navigation__link--light main-navigation__link--current"
+              href="index.html" aria-current="page">Главная</a>
           </li>
           <li class="main-navigation__item main-navigation__item--background">
             <a class="main-navigation__link main-navigation__link--light" href="catalog.html">Фото и видео</a>
