Делает базовую стилизацию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Фото и видео</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -46,13 +46,13 @@
     <main class="main-container-inner">
 
       <!-- ШАПКА ОСНОВНОГО СОДЕРЖИМОГО СТРАНИЦЫ КАТАЛОГА -->
-      <header class="main-container-inner__header hero-header">
-        <img class="hero-header__image" src="img/sedona.svg" width="229" height="39" alt="Текст 'Sedona'.">
+      <header class="main-container-inner__header hero-header hero-header--inner">
+        <img class="hero-header__image hero-header__image--sedona" src="img/sedona.svg" width="229" height="39" alt="Текст 'Sedona'.">
       </header>
 
       <h1 class="main-container-inner__title title">Фото и видео</h1>
       <p class="main-container-inner__description description">
-        Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+        Не можете решиться на путешествие<br>из-за курса? Фотографии помогут вам забыть о политике и экономике.
       </p>
 
       <!-- ФОТО -->
@@ -114,7 +114,7 @@
       <section class="gallery-video">
         <h2 class="visually-hidden">Обзор видео о Седоне.</h2>
         <p class="gallery-video__text title">Все еще сомневаетесь?</p>
-        <p class="gallery-video__description description">Смотрите видеопрезентацию и скорее за билетами, пока
+        <p class="gallery-video__description description">Смотрите видеопрезентацию и<br>скорее за билетами, пока
           они не
           подорожали в очередной раз!</p>
         <!-- Делаем пока картинку-заглушку, после будет использован video -->
@@ -138,25 +138,25 @@
       <!--Ссылки на социальные сети-->
       <ul class="main-footer__socials-list socials-list">
         <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank">
+          <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow noopener">
             <span class="visually-hidden">ВКонтакте.</span>
           </a>
         </li>
         <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank">
+          <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank" rel="nofollow noopener">
             <span class="visually-hidden">Telegram.</span>
           </a>
         </li>
         <li class="socials-list__item">
           <a class="socials-list__link socials-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-            target="_blank">
+            target="_blank" rel="nofollow noopener">
             <span class="visually-hidden">YouTube.</span>
           </a>
         </li>
       </ul>
 
       <!-- Разработано -->
-      <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+      <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="nofollow noopener">
         <span class="develop__text description">Разработано</span>
         <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
           viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
