--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -25,18 +25,18 @@
           <span class="visually-hidden">Открыть меню.</span>
         </button>
         <ul class="main-navigation__list">
-          <li class="main-navigation__item main-navigation__item--background">
-            <a class="main-navigation__link main-navigation__link--light main-navigation__link--current"
+          <li class="main-navigation__item">
+            <a class="main-navigation__link main-navigation__link--current"
               href="index.html" aria-current="page">Главная</a>
           </li>
-          <li class="main-navigation__item main-navigation__item--background">
-            <a class="main-navigation__link main-navigation__link--light" href="catalog.html">Фото и видео</a>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="catalog.html">Фото и видео</a>
           </li>
-          <li class="main-navigation__item main-navigation__item--background">
-            <a class="main-navigation__link main-navigation__link--light" href="form.html">Форма отзыва</a>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="form.html">Форма отзыва</a>
           </li>
-          <li class="main-navigation__item main-navigation__item--background main-navigation__item--last">
-            <a class="main-navigation__link main-navigation__link--light" href="#">HTML Academy</a>
+          <li class="main-navigation__item main-navigation__item--last">
+            <a class="main-navigation__link" href="#">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -47,7 +47,7 @@
 
       <!-- ШАПКА ОСНОВНОГО СОДЕРЖИМОГО СТРАНИЦЫ -->
       <header class="main-container__header hero-header">
-        <img class="hero-header__image" src="img/welcome.svg" width="282" height="214"
+        <img class="hero-header__image hero-header__image--welcome" src="img/welcome.svg" width="282" height="214"
           alt="Текст 'Welcome to the gorgeous Sedona 'Because the Grand Canyon sucrs!'.">
       </header>
 
@@ -56,11 +56,13 @@
       <!--СПИСКИ ПРЕИМУЩЕСТВ-->
       <section class="advantages">
         <h2 class="visually-hidden">Наши преимущества.</h2>
-        <p class="advantages__description title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <div class="advantages__wrapper">
+        <p class="advantages__description title">Седона — небольшой<br>городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages__reasons description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
+      </div>
         <ol class="advantages__list">
-          <li class="advantages__item advantages__item--image">
+          <li class="advantages__item advantages__item--image advantages__item--tavern">
             <div class="advantages__text-wrapper">
               <h3 class="advantages__title title">Настоящий городок</h3>
               <span class="advantages__number">— №1 —</span>
@@ -71,26 +73,32 @@
               alt="На фоне гор двухэтажная таверна с открытой верандой.">
             <ul class="advantages__addition-list addition-list">
               <li class="addition-list__item addition-list__item--housing">
+                <div class="addition-list__text-wrapper">
                 <h4 class="addition-list__title title">Жильё</h4>
                 <p class="addition-list__description description">Рекомендуем пожить в настоящем мотеле, всё как
                   в кино!
                 </p>
+              </div>
               </li>
               <li class="addition-list__item addition-list__item--food">
+                <div class="addition-list__text-wrapper">
                 <h4 class="addition-list__title title">Еда</h4>
                 <p class="addition-list__description description">Всегда заказывайте фирменный бургер, вы не
                   разочаруетесь!
                 </p>
+              </div>
               </li>
               <li class="addition-list__item addition-list__item--souvenirs">
+                <div class="addition-list__text-wrapper">
                 <h4 class="addition-list__title title">Сувениры</h4>
                 <p class="addition-list__description description">Не только китайского, но и местного
                   производства!
                 </p>
+                </div>
               </li>
             </ul>
           </li>
-          <li class="advantages__item advantages__item--image">
+          <li class="advantages__item advantages__item--image advantages__item--bridge-devil">
             <div class="advantages__text-wrapper">
               <h3 class="advantages__title title">Там есть мост дьявола</h3>
               <span class="advantages__number">— №2 —</span>
@@ -103,17 +111,17 @@
           <li class="advantages__item">
             <h3 class="advantages__title title">Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
-            <p class="advantages__description description">Все интересные места находятся очень близко</p>
+            <p class="advantages__description description">Все интересные места находятся<br>очень близко</p>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title title">Красивая дорога</h3>
             <span class="advantages__number">— №4 —</span>
-            <p class="advantages__description description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="advantages__description description">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title title">Мало туристов</h3>
             <span class="advantages__number">— №5 —</span>
-            <p class="advantages__description description">Большинство едет в Гранд Каньон и толпится там</p>
+            <p class="advantages__description description">Большинство едет в Гранд Каньон и&nbsp;толпится там</p>
           </li>
         </ol>
       </section>
@@ -130,7 +138,7 @@
 
       <!-- КАРТА -->
       <!-- Делаем пока картинку-заглушку -->
-      <section class="map">
+      <section class="main-container__map map">
         <h2 class="visually-hidden">Карта.</h2>
         <img class="map__image" src="img/map.jpg" width="320" height="350" alt="Город Седона на карте.">
       </section>
@@ -145,25 +153,25 @@
       <!--Ссылки на социальные сети-->
       <ul class="main-footer__socials-list socials-list">
         <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank">
+          <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow noopener">
             <span class="visually-hidden">ВКонтакте.</span>
           </a>
         </li>
         <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank">
+          <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank" rel="nofollow noopener">
             <span class="visually-hidden">Telegram.</span>
           </a>
         </li>
         <li class="socials-list__item">
           <a class="socials-list__link socials-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-            target="_blank">
+            target="_blank" rel="nofollow noopener">
             <span class="visually-hidden">YouTube.</span>
           </a>
         </li>
       </ul>
 
       <!-- Разработано -->
-      <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+      <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="nofollow noopener">
         <span class="develop__text description">Разработано</span>
         <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
           viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
