--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,42 +3,46 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Фото и видео</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
 
-  <div class="container">
+  <div class="page__container container">
 
     <!--ШАПКА СТРАНИЦЫ КАТАЛОГА-->
-    <header class="main-header">
+    <header class="page__header main-header">
 
       <!--Логотип сайта-->
-      <a class="main-header__logo-link logo" href="index.html">
+      <a class="main-header__logo-link logo" href="index.html" tabindex="3">
         <img class="logo__image" src="img/logo/logo.svg" width="185" height="96" alt="Логотип города Седона.">
       </a>
 
       <!--Навигация-->
-      <nav class="main-header__navigation main-navigation">
+      <!-- Для открытия меню добавить класс main-navigation--opened, а для закрытия класс main-navigation--closed -->
+      <nav class="main-header__navigation main-navigation main-navigation--nojs">
         <button class="main-navigation__toggle" type="button">
-          <span class="visually-hidden">Открыть меню.</span>
+          <span class="visually-hidden">Открыть меню/закрыть меню.</span>
         </button>
-        <ul class="main-navigation__list">
-          <li class="main-navigation__item main-navigation__item--background">
-            <a class="main-navigation__link main-navigation__link--light" href="index.html">Главная</a>
-          </li>
-          <li class="main-navigation__item main-navigation__item--background">
-            <a class="main-navigation__link main-navigation__link--light main-navigation__link--current"
-              href="catalog.html" aria-current="page">Фото и видео</a>
-          </li>
-          <li class="main-navigation__item main-navigation__item--background">
-            <a class="main-navigation__link main-navigation__link--light" href="form.html">Форма отзыва</a>
-          </li>
-          <li class="main-navigation__item main-navigation__item--background main-navigation__item--last">
-            <a class="main-navigation__link main-navigation__link--light" href="#">HTML Academy</a>
-          </li>
-        </ul>
+        <div class="main-navigation__wrapper">
+          <ul class="main-navigation__list">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="index.html" tabindex="1">Главная</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--current" href="catalog.html" tabindex="2"
+                aria-current="page">Фото и видео</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="form.html">Форма отзыва</a>
+            </li>
+            <li class="main-navigation__item main-navigation__item--last">
+              <a class="main-navigation__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -47,22 +51,27 @@
 
       <!-- ШАПКА ОСНОВНОГО СОДЕРЖИМОГО СТРАНИЦЫ КАТАЛОГА -->
       <header class="main-container-inner__header hero-header hero-header--inner">
-        <img class="hero-header__image hero-header__image--sedona" src="img/sedona.svg" width="229" height="39" alt="Текст 'Sedona'.">
+        <img class="hero-header__image hero-header__image--sedona" src="img/sedona.svg" width="229" height="39"
+          alt="Текст 'Sedona'.">
       </header>
 
-      <h1 class="main-container-inner__title title">Фото и видео</h1>
-      <p class="main-container-inner__description description">
-        Не можете решиться на путешествие<br>из-за курса? Фотографии помогут вам забыть о политике и экономике.
-      </p>
+      <div class="main-container-inner__text-wrapper">
+        <h1 class="main-container-inner__title title">Фото и видео</h1>
+        <p class="main-container-inner__description description">
+          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+        </p>
+      </div>
 
       <!-- ФОТО -->
       <section class="gallery-photo">
         <h2 class="visually-hidden">Фото достопримечательностей Седоны.</h2>
         <ul class="gallery-photo__list">
-          <li class="gallery-photo__item gallery-photo__item--background gallery-photo__item--light-text">
-            <div class="gallery-photo__info-text-wrapper">
-              <h3 class="gallery-photo__title title">Неродные просторы</h3>
-              <p class="gallery-photo__author">Автор фото: Борис</p>
+          <li class="gallery-photo__item">
+            <div class="gallery-photo__info-wrapper">
+              <div class="gallery-photo__text-wrapper">
+                <h3 class="gallery-photo__title title">Неродные просторы</h3>
+                <p class="gallery-photo__author">Автор фото: Борис</p>
+              </div>
               <button class="gallery-photo__like-button button-like" type="button">
                 <span class="visually-hidden">Лайк.</span>
                 <span class="button-like__quantity"><b class="button-like__number">1350</b></span>
@@ -71,10 +80,12 @@
             <img class="gallery-photo__image" src="img/catalog/open-spaces-gallery.jpg" width="280" height="280"
               alt="Дорога, уходящая вдаль, на фоне гор и ночного заката, по краям которой растут деревья и кустарники.">
           </li>
-          <li class="gallery-photo__item gallery-photo__item--background gallery-photo__item--light-text">
-            <div class="gallery-photo__info-text-wrapper">
-              <h3 class="gallery-photo__title title">Местная растительность</h3>
-              <p class="gallery-photo__author">Автор фото: Сергей</p>
+          <li class="gallery-photo__item">
+            <div class="gallery-photo__info-wrapper">
+              <div class="gallery-photo__text-wrapper">
+                <h3 class="gallery-photo__title title">Местная растительность</h3>
+                <p class="gallery-photo__author">Автор фото: Сергей</p>
+              </div>
               <button class="gallery-photo__like-button button-like" type="button">
                 <span class="visually-hidden">Лайк.</span>
                 <span class="button-like__quantity"><b class="button-like__number">143</b></span>
@@ -83,10 +94,12 @@
             <img class="gallery-photo__image" src="img/catalog/vegetation-gallery.jpg" width="280" height="280"
               alt="Цветущий кактус на фоне красно-коричневых скалистых гор.">
           </li>
-          <li class="gallery-photo__item gallery-photo__item--background gallery-photo__item--light-text">
-            <div class="gallery-photo__info-text-wrapper">
-              <h3 class="gallery-photo__title title">Дорога на север</h3>
-              <p class="gallery-photo__author">Автор фото: Петр</p>
+          <li class="gallery-photo__item">
+            <div class="gallery-photo__info-wrapper">
+              <div class="gallery-photo__text-wrapper">
+                <h3 class="gallery-photo__title title">Дорога на север</h3>
+                <p class="gallery-photo__author">Автор фото: Петр</p>
+              </div>
               <button class="gallery-photo__like-button button-like" type="button">
                 <span class="visually-hidden">Лайк.</span>
                 <span class="button-like__quantity"><b class="button-like__number">96</b></span>
@@ -95,10 +108,12 @@
             <img class="gallery-photo__image" src="img/catalog/road-gallery.jpg" width="280" height="280"
               alt="Вид сверху на извилистую дорогу в горах, проходящую среди зеленых зарослей деревьев и кустарников.">
           </li>
-          <li class="gallery-photo__item gallery-photo__item--background gallery-photo__item--light-text">
-            <div class="gallery-photo__info-text-wrapper">
-              <h3 class="gallery-photo__title title">Мост дьявола</h3>
-              <p class="gallery-photo__author">Автор фото: Антон</p>
+          <li class="gallery-photo__item">
+            <div class="gallery-photo__info-wrapper">
+              <div class="gallery-photo__text-wrapper">
+                <h3 class="gallery-photo__title title">Мост дьявола</h3>
+                <p class="gallery-photo__author">Автор фото: Антон</p>
+              </div>
               <button class="gallery-photo__like-button button-like" type="button">
                 <span class="visually-hidden">Лайк.</span>
                 <span class="button-like__quantity"><b class="button-like__number">254</b></span>
@@ -112,11 +127,14 @@
 
       <!-- ВИДЕО -->
       <section class="gallery-video">
-        <h2 class="visually-hidden">Обзор видео о Седоне.</h2>
-        <p class="gallery-video__text title">Все еще сомневаетесь?</p>
-        <p class="gallery-video__description description">Смотрите видеопрезентацию и<br>скорее за билетами, пока
-          они не
-          подорожали в очередной раз!</p>
+        <div class="gallery-video__text-wrapper">
+          <h2 class="visually-hidden">Обзор видео о Седоне.</h2>
+          <p class="gallery-video__text title">Все еще сомневаетесь?</p>
+          <p class="gallery-video__description description">Смотрите видеопрезентацию и скорее за билетами, пока
+            они не
+            подорожали в очередной раз!</p>
+        </div>
+
         <!-- Делаем пока картинку-заглушку, после будет использован video -->
         <div class="gallery-video__video-wrapper video">
           <a class="video__link" href="#">
@@ -132,42 +150,48 @@
     <!-- ПОДВАЛ ОСНОВНОГО СОДЕРЖИМОГО СТРАНИЦЫ КАТАЛОГА -->
     <footer class="main-footer">
 
-      <!-- Хэштег -->
-      <a class="main-footer__hashteg-link title" href="#">#visitSEDONA</a>
+      <div class="main-footer__wrapper">
+        <!-- Хэштег -->
+        <a class="main-footer__hashteg-link title" href="#">#visitSEDONA</a>
 
-      <!--Ссылки на социальные сети-->
-      <ul class="main-footer__socials-list socials-list">
-        <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow noopener">
-            <span class="visually-hidden">ВКонтакте.</span>
-          </a>
-        </li>
-        <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank" rel="nofollow noopener">
-            <span class="visually-hidden">Telegram.</span>
-          </a>
-        </li>
-        <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-            target="_blank" rel="nofollow noopener">
-            <span class="visually-hidden">YouTube.</span>
-          </a>
-        </li>
-      </ul>
+        <!--Ссылки на социальные сети-->
+        <ul class="main-footer__socials-list socials-list">
+          <li class="socials-list__item">
+            <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy"
+              target="_blank" rel="nofollow noopener">
+              <span class="visually-hidden">ВКонтакте.</span>
+            </a>
+          </li>
+          <li class="socials-list__item">
+            <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank"
+              rel="nofollow noopener">
+              <span class="visually-hidden">Telegram.</span>
+            </a>
+          </li>
+          <li class="socials-list__item">
+            <a class="socials-list__link socials-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+              target="_blank" rel="nofollow noopener">
+              <span class="visually-hidden">YouTube.</span>
+            </a>
+          </li>
+        </ul>
 
-      <!-- Разработано -->
-      <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="nofollow noopener">
-        <span class="develop__text description">Разработано</span>
-        <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
-          viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M14.65.45h-.1l-13.5 1.4v24.7l13.5 8 13.4-8V1.85L14.65.45Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z"
-            fill="#000" />
-        </svg>
-        <span class="visually-hidden">Логотип сайта HTML Academy.</span>
-      </a>
+        <!-- Разработано -->
+        <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
+          rel="nofollow noopener">
+          <span class="develop__text description">Разработано</span>
+          <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
+            viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M14.65.45h-.1l-13.5 1.4v24.7l13.5 8 13.4-8V1.85L14.65.45Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z"
+              fill="#000" />
+          </svg>
+          <span class="visually-hidden">Логотип сайта HTML Academy.</span>
+        </a>
+      </div>
     </footer>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
