--- a/source/index.html
+++ b/source/index.html
@@ -3,42 +3,46 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
 
-  <div class="container">
+  <div class="page__container container">
 
     <!--ШАПКА ГЛАВНОЙ СТРАНИЦЫ-->
-    <header class="main-header">
+    <header class="page__header main-header">
 
       <!--Логотип сайта-->
-      <a class="main-header__logo-link logo" href="index.html" aria-current="page">
+      <a class="main-header__logo-link logo" href="index.html" tabindex="3" aria-current="page">
         <img class="logo__image" src="img/logo/logo.svg" width="185" height="96" alt="Логотип города Седона.">
       </a>
 
       <!--Навигация-->
-      <nav class="main-header__navigation main-navigation">
+      <!-- Для открытия меню добавить класс main-navigation--opened, а для закрытия класс main-navigation--closed -->
+      <nav class="main-header__navigation main-navigation main-navigation--nojs">
         <button class="main-navigation__toggle" type="button">
-          <span class="visually-hidden">Открыть меню.</span>
+          <span class="visually-hidden">Открыть меню/закрыть меню.</span>
         </button>
-        <ul class="main-navigation__list">
-          <li class="main-navigation__item">
-            <a class="main-navigation__link main-navigation__link--current"
-              href="index.html" aria-current="page">Главная</a>
-          </li>
-          <li class="main-navigation__item">
-            <a class="main-navigation__link" href="catalog.html">Фото и видео</a>
-          </li>
-          <li class="main-navigation__item">
-            <a class="main-navigation__link" href="form.html">Форма отзыва</a>
-          </li>
-          <li class="main-navigation__item main-navigation__item--last">
-            <a class="main-navigation__link" href="#">HTML Academy</a>
-          </li>
-        </ul>
+        <div class="main-navigation__wrapper">
+          <ul class="main-navigation__list">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--current" href="index.html" tabindex="1"
+                aria-current="page">Главная</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="catalog.html" tabindex="2">Фото и видео</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="form.html">Форма отзыва</a>
+            </li>
+            <li class="main-navigation__item main-navigation__item--last">
+              <a class="main-navigation__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -57,83 +61,89 @@
       <section class="advantages">
         <h2 class="visually-hidden">Наши преимущества.</h2>
         <div class="advantages__wrapper">
-        <p class="advantages__description title">Седона — небольшой<br>городок в Аризоне, заслуживающий большего!</p>
-        <p class="advantages__reasons description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-      </div>
+          <p class="advantages__description title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="advantages__reasons description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+          </p>
+        </div>
         <ol class="advantages__list">
           <li class="advantages__item advantages__item--image advantages__item--tavern">
-            <div class="advantages__text-wrapper">
-              <h3 class="advantages__title title">Настоящий городок</h3>
-              <span class="advantages__number">— №1 —</span>
-              <p class="advantages__description description">Седона — не аттракцион для туристов, там
-                течёт своя жизнь</p>
+            <div class="advantages__image-wrapper">
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__title title">Настоящий городок</h3>
+                <span class="advantages__number">— №1 —</span>
+                <p class="advantages__description description">Седона — не аттракцион для туристов, там
+                  течёт своя жизнь</p>
+              </div>
+              <img class="advantages__image" src="img/tavern.jpg" width="320" height="260"
+                alt="На фоне гор двухэтажная таверна с открытой верандой.">
             </div>
-            <img class="advantages__image" src="img/tavern.jpg" width="320" height="260"
-              alt="На фоне гор двухэтажная таверна с открытой верандой.">
             <ul class="advantages__addition-list addition-list">
               <li class="addition-list__item addition-list__item--housing">
                 <div class="addition-list__text-wrapper">
-                <h4 class="addition-list__title title">Жильё</h4>
-                <p class="addition-list__description description">Рекомендуем пожить в настоящем мотеле, всё как
-                  в кино!
-                </p>
-              </div>
+                  <h4 class="addition-list__title title">Жильё</h4>
+                  <p class="addition-list__description description">Рекомендуем пожить в настоящем мотеле, всё как
+                    в кино!
+                  </p>
+                </div>
               </li>
               <li class="addition-list__item addition-list__item--food">
                 <div class="addition-list__text-wrapper">
-                <h4 class="addition-list__title title">Еда</h4>
-                <p class="addition-list__description description">Всегда заказывайте фирменный бургер, вы не
-                  разочаруетесь!
-                </p>
-              </div>
+                  <h4 class="addition-list__title title">Еда</h4>
+                  <p class="addition-list__description description">Всегда заказывайте фирменный бургер, вы не
+                    разочаруетесь!
+                  </p>
+                </div>
               </li>
               <li class="addition-list__item addition-list__item--souvenirs">
                 <div class="addition-list__text-wrapper">
-                <h4 class="addition-list__title title">Сувениры</h4>
-                <p class="addition-list__description description">Не только китайского, но и местного
-                  производства!
-                </p>
+                  <h4 class="addition-list__title title">Сувениры</h4>
+                  <p class="addition-list__description description">Не только китайского, но и местного
+                    производства!
+                  </p>
                 </div>
               </li>
             </ul>
           </li>
           <li class="advantages__item advantages__item--image advantages__item--bridge-devil">
-            <div class="advantages__text-wrapper">
-              <h3 class="advantages__title title">Там есть мост дьявола</h3>
-              <span class="advantages__number">— №2 —</span>
-              <p class="advantages__description description">Да, по нему можно пройти! Если вы осмелитесь, конечно
-              </p>
+            <div class="advantages__image-wrapper">
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__title title">Там есть мост дьявола</h3>
+                <span class="advantages__number">— №2 —</span>
+                <p class="advantages__description description">Да, по нему можно пройти! Если вы осмелитесь, конечно
+                </p>
+              </div>
+              <img class="advantages__image" src="img/devils-bridge.jpg" width="320" height="260"
+                alt="Обзор тропы Моста Дьявола, которая представляет собой самую большую арку из природного песчаника.">
             </div>
-            <img class="advantages__image" src="img/devils-bridge.jpg" width="320" height="260"
-              alt="Обзор тропы Моста Дьявола, которая представляет собой самую большую арку из природного песчаника.">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title title">Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
-            <p class="advantages__description description">Все интересные места находятся<br>очень близко</p>
+            <p class="advantages__description description">Все интересные места находятся очень близко</p>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title title">Красивая дорога</h3>
             <span class="advantages__number">— №4 —</span>
-            <p class="advantages__description description">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
+            <p class="advantages__description description">Ехать в Седону из Лас-Вегаса
+              совсем не скучно!</p>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title title">Мало туристов</h3>
             <span class="advantages__number">— №5 —</span>
-            <p class="advantages__description description">Большинство едет в Гранд Каньон и&nbsp;толпится там</p>
+            <p class="advantages__description description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </section>
 
       <!--ПОИСК ГОСТИНИЦЫ-->
       <section class="search">
-        <h2 class="visually-hidden">Поиск гостиницы.</h2>
-        <p class="search__text title">Заинтересовались?</p>
-        <p class="search__description description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-          предложения
-          гостиниц в Седоне</p>
-        <a class="search__link button" href="#">Найти гостиницу</a>
+        <div class="search__text-wrapper">
+          <h2 class="visually-hidden">Поиск гостиницы.</h2>
+          <p class="search__text title">Заинтересовались?</p>
+          <p class="search__description description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в Седоне</p>
+          <a class="search__link button" href="#">Найти гостиницу</a>
+        </div>
       </section>
 
       <!-- КАРТА -->
@@ -147,42 +157,48 @@
     <!--ПОДВАЛ ГЛАВНОЙ СТРАНИЦЫ-->
     <footer class="main-footer">
 
-      <!-- Хэштег -->
-      <a class="main-footer__hashteg-link title" href="#">#visitSEDONA</a>
+      <div class="main-footer__wrapper">
+        <!-- Хэштег -->
+        <a class="main-footer__hashteg-link title" href="#">#visitSEDONA</a>
 
-      <!--Ссылки на социальные сети-->
-      <ul class="main-footer__socials-list socials-list">
-        <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow noopener">
-            <span class="visually-hidden">ВКонтакте.</span>
-          </a>
-        </li>
-        <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank" rel="nofollow noopener">
-            <span class="visually-hidden">Telegram.</span>
-          </a>
-        </li>
-        <li class="socials-list__item">
-          <a class="socials-list__link socials-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-            target="_blank" rel="nofollow noopener">
-            <span class="visually-hidden">YouTube.</span>
-          </a>
-        </li>
-      </ul>
+        <!--Ссылки на социальные сети-->
+        <ul class="main-footer__socials-list socials-list">
+          <li class="socials-list__item">
+            <a class="socials-list__link socials-list__link--vkontakte" href="https://vk.com/htmlacademy"
+              target="_blank" rel="nofollow noopener">
+              <span class="visually-hidden">ВКонтакте.</span>
+            </a>
+          </li>
+          <li class="socials-list__item">
+            <a class="socials-list__link socials-list__link--telegram" href="https://t.me/htmlacademy" target="_blank"
+              rel="nofollow noopener">
+              <span class="visually-hidden">Telegram.</span>
+            </a>
+          </li>
+          <li class="socials-list__item">
+            <a class="socials-list__link socials-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+              target="_blank" rel="nofollow noopener">
+              <span class="visually-hidden">YouTube.</span>
+            </a>
+          </li>
+        </ul>
 
-      <!-- Разработано -->
-      <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="nofollow noopener">
-        <span class="develop__text description">Разработано</span>
-        <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
-          viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M14.65.45h-.1l-13.5 1.4v24.7l13.5 8 13.4-8V1.85L14.65.45Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z"
-            fill="#000" />
-        </svg>
-        <span class="visually-hidden">Логотип сайта HTML Academy.</span>
-      </a>
+        <!-- Разработано -->
+        <a class="main-footer__develop-link develop" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
+          rel="nofollow noopener">
+          <span class="develop__text description">Разработано</span>
+          <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
+            viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M14.65.45h-.1l-13.5 1.4v24.7l13.5 8 13.4-8V1.85L14.65.45Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z"
+              fill="#000" />
+          </svg>
+          <span class="visually-hidden">Логотип сайта HTML Academy.</span>
+        </a>
+      </div>
     </footer>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
